--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
 <body>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" id="page1">
+            <div class="swiper-slide swiper-slide1" id="page1">
                 <div class="quan quan1"></div>
                 <div class="quan quan2"></div>
                 <div class="quan quan3"></div>
                 <div class="box box1">shark</div>
                 <div class="box box2">男</div>
-                <div class="box box3">艺术来源于生<span>活</span></div>
+                <div class="box box3">艺术来源于生<span class="sp">活</span></div>
             </div>
-            <div class="swiper-slide" id="page2">
+            <div class="swiper-slide swiper-slide2" id="page2">
                 <div class="suoming">个人说明</div>
                 <div class="hr hr1"></div>
                 <div class="hr hr2"></div>
@@ -55,7 +55,7 @@
                     初次见面，您好，我是一名XXXXXX,现阶段技术已达到工作水平，而又对贵公司青睐已久，希望能在贵公司一展自己所学，为公司发展尽微薄之力，巴拉巴拉
                 </div>
             </div>
-            <div class="swiper-slide" id="page3">
+            <div class="swiper-slide swiper-slide3" id="page3">
                 <div class="box1 ani" swiper-animate-effect="xiadi1"><span>窝窝头，一块钱4个 嘿嘿</span>
                     <br>呃呃呃``，不好意思拿错剧本了</div>
                 <div class="box2 ani" swiper-animate-effect="xiadi2">
