--- a/index.html
+++ b/index.html
@@ -44,31 +44,40 @@
                 <div class="box box3">艺术来源于生<span class="sp">活</span></div>
             </div>
             <div class="swiper-slide swiper-slide2" id="page2">
-                <div class="suoming">个人说明</div>
+                <div class="suoming">自我介绍</div>
                 <div class="hr hr1"></div>
                 <div class="hr hr2"></div>
                 <div class="box box1"></div>
                 <div class="box box2"></div>
                 <div class="box box3"></div>
                 <div class="box box4"></div>
-                <div class="blbl"><!-- 初次见面，您好，我来自珠峰培训名师周啸天座下弟子XXX是也,现技术愈发成熟,恩师便为了招下期学员将在下赶了出来 -->
-                    初次见面，您好，我是一名XXXXXX,现阶段技术已达到工作水平，而又对贵公司青睐已久，希望能在贵公司一展自己所学，为公司发展尽微薄之力，巴拉巴拉
+                <div class="blbl">
+                    属性:男<br>
+                    特征：多动症患者，脑洞大，喜欢玩游戏，
+                    守望先锋迷<br>
+                    必杀:「 大家注意这波操作」<br>
+                    <!-- 致命伤:「」 -->
+                    微信:18730055543<br>
+                    推荐购买指数:SSS<br>
                 </div>
             </div>
             <div class="swiper-slide swiper-slide3" id="page3">
-                <div class="box1 ani" swiper-animate-effect="xiadi1"><span>窝窝头，一块钱4个 嘿嘿</span>
-                    <br>呃呃呃``，不好意思拿错剧本了</div>
+                <div class="box1 ani" swiper-animate-effect="xiadi1"><span>熟练原生JS及ES6及迭代版本语法</span>
+                    <br>追求代码高质量可维护性。</div>
                 <div class="box2 ani" swiper-animate-effect="xiadi2">
-                    <span>精通html5,css3,js</span>
-                    熟练js底层原理、封装等
+                    <span>技术栈 : Vue+Vuex+Vue-Router
                 </div>
                 <div class="box3 ani" swiper-animate-effect="xiadi3">
-                    <span>熟悉Promise设计模式、axios封装</span>
+                    <span>工具： Element-UI、Vant，Axios，git、npm、webpack</span>
                     <br>
-                   什么，不让吹牛啊
+                    熟悉 ECharts前端交互图表。
                 </div>
-                <p class="shangtian ani" swiper-animate-effect="shangtian">我会啥子<br>？</p>
+                <p class="shangtian ani" swiper-animate-effect="shangtian">我的技能<br>？</p>
                 <img src="image/xiangzhi.jpg" alt="" class="ani" swiper-animate-effect="xiang">
+            </div>
+            <div class="swiper-slide swiper-slide4" id="page4">
+                <img src="image/page4bj.jpg" alt="" class="page4bj" swiper-animate-effect="xiang">
+                <div  class="blbl">This is me</div>
             </div>
         </div>
     </div>
