--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
                 <div class="box box3"></div>
                 <div class="box box4"></div>
                 <div class="blbl">
-                    属性:男<br>
-                    特征：多动症患者，脑洞大，喜欢玩游戏，
-                    守望先锋迷<br>
+                    属性:人形碳基生命<br>
+                    特征：多动症患者，脑洞大，乐观喜欢玩游戏，
+                    听音乐，看动漫<br>
                     必杀:「 大家注意这波操作」<br>
                     <!-- 致命伤:「」 -->
                     微信:18730055543<br>
-                    推荐购买指数:SSS<br>
+                    <!-- PS:有只猫咪叫糯糯<br> -->
+                    推荐指数:SSS<br>
                 </div>
             </div>
             <div class="swiper-slide swiper-slide3" id="page3">
-                <div class="box1 ani" swiper-animate-effect="xiadi1"><span>熟练原生JS及ES6及迭代版本语法</span>
-                    <br>追求代码高质量可维护性。</div>
+                <div class="box1 ani" swiper-animate-effect="xiadi1"><span>问就是年轻</span>
+                    <br></div>
                 <div class="box2 ani" swiper-animate-effect="xiadi2">
-                    <span>技术栈 : Vue+Vuex+Vue-Router
+                    <span>事少
                 </div>
                 <div class="box3 ani" swiper-animate-effect="xiadi3">
-                    <span>工具： Element-UI、Vant，Axios，git、npm、webpack</span>
+                    <span>能干活</span>
                     <br>
-                    熟悉 ECharts前端交互图表。
                 </div>
-                <p class="shangtian ani" swiper-animate-effect="shangtian">我的技能<br>？</p>
+                <p class="shangtian ani" swiper-animate-effect="shangtian">我的优势<br>？</p>
                 <img src="image/xiangzhi.jpg" alt="" class="ani" swiper-animate-effect="xiang">
             </div>
             <div class="swiper-slide swiper-slide4" id="page4">
