--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 <div class="box box3"></div>
                 <div class="box box4"></div>
                 <div class="blbl">
-                    属性:人形碳基生命<br>
-                    特征：多动症患者，脑洞大，乐观喜欢玩游戏，
+                    属性: 人形碳基生命<br>
+                    特征：多动症患者，脑洞大，喜欢玩游戏，
                     听音乐，看动漫<br>
                     必杀:「 大家注意这波操作」<br>
                     <!-- 致命伤:「」 -->
